# fivaldi-api-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml
src/fivaldi/: client.py
src/fivaldi/api/: auth.py  endpoint.py
